Added Table at desired location

--- a/home.html
+++ b/home.html
@@ -50,67 +50,85 @@
       <div class="shape shape-11">
         <img src="img/blue/tech1.png" class="rellax" data-rellax-speed="-5" />
       </div>
-    </div>
-    <div class="main">
-      <div class="main-cent animated fadeInDown">
-        <!-- <div class="container">
-          <p class="header-text" style="font-size: 1.5rem" href="#sponsors">
-            JAYPEE INSTITUTE OF INFORMATION TECHNOLOGY
-          </p>
-          <p class="header-text" style="font-size: 1.5" href="#sponsors">
-            IS
-          </p>
-          <p class="header-text" style="font-size: 1.5" href=" #sponsors">
-            ORGANISING
-          </p>
-        </div> -->
-        <img class="logo" src="assets/icabb light.png" alt="" />
-        <img class="logo1" src="assets/logo1.png" alt="" />
-        <div class="main-header-div">
-          <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
-            INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
+      </div>
+      <div class="main">
+        <div class="main-cent animated fadeInDown">
+          <!-- <div class="container">
+            <p class="header-text" style="font-size: 1.5rem" href="#sponsors">
+              JAYPEE INSTITUTE OF INFORMATION TECHNOLOGY
+            </p>
+            <p class="header-text" style="font-size: 1.5" href="#sponsors">
+              IS
+            </p>
+            <p class="header-text" style="font-size: 1.5" href=" #sponsors">
+              ORGANISING
+            </p>
+          </div> -->
+          <img class="logo" src="assets/icabb light.png" alt="" />
+          <img class="logo1" src="assets/logo1.png" alt="" />
+          <div class="main-header-div">
+            <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
+              INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
 
-            <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
-            <!-- <p style="margin-bottom: 0; font-size: 2rem">
+              <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
+              <!-- <p style="margin-bottom: 0; font-size: 2rem">
 
-          </p> -->
-            <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
+            </p> -->
+              <h1 style="margin-bottom: 0; font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
 
-        </div>
-        <div class="navigation container-fluid">
-          <div class="navtab">
-            <ul>
-              <li class="list-item"><a class="navbar" href="#about">ABOUT</a></li>
-              <li class="list-item"><a class="navbar" href="brochure.html">VIEW BROCHURE</a></li>
-              <li class="list-item"><a class="navbar" href="callForAbstract.html">CALL FOR ABSTRACT</a></li>
-              <li class="list-item"><a class="navbar" href="speakers.html">SPEAKERS</a></li>
-              <li class="list-item"><a class="navbar" href="registration">REGISTER</a></li>
-              <li class="list-item"><a class="navbar" href="schedule.html">SCHEDULE</a></li>
-              <li class="list-item"><a class="navbar" href="orgCommittee.html">ORGANISING COMMITEE</a></li>
-              <li class="list-item"><a class="navbar" href="advisoryCommittee.html">ADVISORY COMMITEE</a></li>
-              <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
-              <li class="list-item"><a class="navbar" href="#Sponsors">SPONSORS</a></li>
-              <li class="list-item"><a class="navbar" href="gallery.html">GALLERY</a></li>
-              <!-- target="_blank" -->
-            </ul>
+          </div>
+            <div class="navigation container-fluid">
+              <div class="navtab">
+                <ul>
+                  <li class="list-item"><a class="navbar" href="#about">ABOUT</a></li>
+                  <li class="list-item"><a class="navbar" href="brochure.html">VIEW BROCHURE</a></li>
+                  <li class="list-item"><a class="navbar" href="callForAbstract.html">CALL FOR ABSTRACT</a></li>
+                  <li class="list-item"><a class="navbar" href="speakers.html">SPEAKERS</a></li>
+                  <li class="list-item"><a class="navbar" href="registration.html">REGISTER</a></li>
+                  <li class="list-item"><a class="navbar" href="schedule.html">SCHEDULE</a></li>
+                  <li class="list-item"><a class="navbar" href="orgCommittee.html">ORGANISING COMMITEE</a></li>
+                  <li class="list-item"><a class="navbar" href="advisoryCommittee.html">ADVISORY COMMITEE</a></li>
+                  <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
+                  <li class="list-item"><a class="navbar" href="#Sponsors">SPONSORS</a></li>
+                  <li class="list-item"><a class="navbar" href="gallery.html">GALLERY</a></li>
+                  <!-- target="_blank" -->
+                </ul>
+              </div>
           </div>
 
-
-
-        </div>
-
-        <!-- <p class="power" href="#sponsors">
-          28<sup>th</sup> January - 30<sup>th</sup> January 2022
-        </p>
-        <h2 class="sign">
-          <p class="power" style="text-transform: uppercase" href="#sponsors">
-            <span style="color: red">Abstract Submission closed</span>
+          <!-- <p class="power" href="#sponsors">
+            28<sup>th</sup> January - 30<sup>th</sup> January 2022
           </p>
-        </h2>
+          <h2 class="sign">
+            <p class="power" style="text-transform: uppercase" href="#sponsors">
+              <span style="color: red">Abstract Submission closed</span>
+            </p>
+          </h2>
 
-        <p class="power" href="#sponsors">VIRTUAL</p> -->
+          <p class="power" href="#sponsors">VIRTUAL</p> -->
+          <table class="table table-hover impDates">
+            <thead>
+              <tr>
+                <th>IMPORTANT DATES</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="impItem">Last date of Abstract Submission:</td>
+                <td class="impItem">15 December,2021</td>
+              </tr>
+              <tr>
+                <td class="impItem">Acceptance notice:</td>
+                <td class="impItem">Within 2 weeks of Submission</td>
+              </tr>
+              <tr>
+                <td class="impItem">Last date of Registration:</td>
+                <td class="impItem">24 December,2021</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
-    </div>
 
 
     <div class="main-wrap past-photo">
@@ -700,7 +718,7 @@
           <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
         </div>
         <div class="credit">
-          <a target="_blank" href="contact-us" style="
+          <a target="_blank" href="contact-us.html" style="
                 padding: 0 3px;
                 padding-bottom: 2px;
                 border-bottom: white 2px solid;
