--- a/registration-fees.html
+++ b/registration-fees.html
@@ -75,7 +75,7 @@
                                   <th scope="col">Till 24th Dec 2021</th>
                                   <th scope="col">After 24th Dec 2021</th>
                                   <th scope="col">Till 24th Dec 2021</th>
-                                  <th scope="col">Till 24th Dec 2021</th>
+                                  <th scope="col">After 24th Dec 2021</th>
                                 </tr>
                                 <tr>
                                     <th scope="row" colspan="2">Industry</th>
