--- a/registration.html
+++ b/registration.html
@@ -59,9 +59,85 @@
                 <div class="container" style="padding-bottom:15%;">
                     <div class="container d-flex flex-column align-items-center justify-content-center"
                         style="margin-top: 30px;">
-                        <p style="color: red;font-weight: bold;">NO APPLICATION WILL BE ENTERTAINED WITHOUT FEE PAYMENT
+                        <p style="color: red;font-weight: bold;"> NO APPLICATION WILL BE ENTERTAINED FOR ATTENDEES WITHOUT PAYMENT 
                         </p><br />
                     </div>
+
+                    <!-- Table Test -->
+                    <div class="table-responsive">
+                        <p style=" text-align: center; color: #28b5b5;"> Fee Details: Scroll Left for more columns</p>
+                    <table class="table table-sm" style="empty-cells:show; text-align:center;">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col" colspan="2"></th>
+                                <th scope="col" colspan="2">Indian Participants (INR)</th>
+                                <th scope="col" colspan="2">International Participants (USD)</th>
+                                <!-- <th scope="col">INTERNATIONAL PARTICIPATION (USD)</th> -->
+                            </tr>
+                        </thead>
+                        <tbody style="text-align:center;">
+                            <tr>
+                              <th scope="col" colspan="2"></th>
+                              <th scope="col">Till 24th Dec 2021</th>
+                              <th scope="col">After 24th Dec 2021</th>
+                              <th scope="col">Till 24th Dec 2021</th>
+                              <th scope="col">After 24th Dec 2021</th>
+                            </tr>
+                            <tr>
+                                <th scope="row" colspan="2">Industry</th>
+                                <td>8,000</td>
+                                <td>9,000</td>
+                                <td>350</td>
+                                <td>400</td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row" colspan="2">Academia</th>
+                                <td>6,000</td>
+                                <td>6,500</td>
+                                <td>250</td>
+                                <td>300</td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row" colspan="2">Research Scholar</th>
+                                <td>2,000</td>
+                                <td>2,500</td>
+                                <td>200</td>
+                                <td>250</td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row" colspan="2">Students (UG/PG)</th>
+                                <td>2,000</td>
+                                <td>2,500</td>
+                                <td>200</td>
+                                <td>250</td>
+                            </tr>
+
+                            <tr>
+                                <th scope="row" colspan="2">Attendee Only</th>
+                                <td>500</td>
+                                <td>1,200</td>
+                                <td>100</td>
+                                <td>150</td>
+                            </tr>
+
+                            <!-- <tr>
+                                <th scope="row" rowspan="2">Presenter/Attendee</th>
+                                <th scope="row">Faculty/Scientists from Academia</th>
+                                <td style="text-align: center;">₹ 2000</td>
+                                <td style="text-align: center;">$ 200</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">Participants from Industry</th>
+                                <td style="text-align: center;">₹ 5000</td>
+                                <td style="text-align: center;">$ 300</td>
+                            </tr> -->
+                        </tbody>
+                    </table>
+                </div>
+
                     <h2 class="text-center">ATTENDEE</h2>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
