--- a/gallery.html
+++ b/gallery.html
@@ -106,8 +106,8 @@
             </div>
         </div>
 
-        <div class="lightbox">
-  <div class="row">
+  <div class="lightbox">
+    <!-- <div class="row">
     <div class="col-lg-6">
       <img
         src="assets/gal1.jpg"
@@ -123,27 +123,27 @@
       />
     </div>
     <div class="col-lg-6">
-      <img
-        src="assets/gal3.jpg"
-        data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
-        alt="Lightbox image 3"
-        class="w-100 shadow-1-strong rounded"
-      />
-      <img
-        src="assets/gal4.jpg"
-        data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
-        alt="Lightbox image 3"
-        class="w-100 shadow-1-strong rounded"
-      />
-      <img
-        src="assets/gal5.jpg"
-        data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
-        alt="Lightbox image 3"
-        class="w-100 shadow-1-strong rounded"
-      />
-    </div>
+        <img
+          src="assets/gal3.jpg"
+          data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
+          alt="Lightbox image 3"
+          class="w-100 shadow-1-strong rounded"
+        />
+        <img
+          src="assets/gal4.jpg"
+          data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
+          alt="Lightbox image 3"
+          class="w-100 shadow-1-strong rounded"
+        />
+        <img
+          src="assets/gal5.jpg"
+          data-mdb-img="https://mdbootstrap.com/img/Photos/Vertical/1.jpg"
+          alt="Lightbox image 3"
+          class="w-100 shadow-1-strong rounded"
+        />
+      </div>
+    </div> -->
   </div>
-</div>
 
 
         <div class="title">GALLERY</div>
