--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -94,7 +94,7 @@
                             </div>
                         </div> -->
                         <!-- <a href="registration"><button>REGISTER NOW</button></a> -->
-                        <a href="contact-us.html"><button>CONTACT US</button></a>
+                        <a href="contact-us.html"><button>CONTACT THE ORGANIZERS</button></a>
 
                     </div>
                 </div>
