--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -120,7 +120,7 @@
                     <div class="team-row" style="margin-bottom:400px;">
 
                       <div class="judges img">
-                        <img src="assets/org1-copy.jpg" />
+                        <img src="assets/org-rachna.jpeg" />
                         <div class="team-content">
                           <h1>Prof. Rachana</h1>
                           <br />
@@ -279,7 +279,7 @@
                             </div>
                         </div> -->
                         <!-- <a href="registration"><button>REGISTER NOW</button></a> -->
-                        <a href="contact-us.html"><button>CONTACT US</button></a>
+                        <a href="contact-us.html"><button>CONTACT THE ORGANIZERS</button></a>
 
                     </div>
                 </div>
