--- a/contact-us.html
+++ b/contact-us.html
@@ -50,7 +50,7 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             ">
-                    CONTACT US
+                    TO CONTACT THE ORGANIZERS
                 </h1>
                 <div class="head">
                     <p></p>
@@ -60,12 +60,7 @@
                     <div class="content-gray" style="display: block;">
                         <p>Prof. Rachana - <a href="tel:919315434437">+91-9315434437</a></p>
                         <p>Dr. Shazia Haider - <a href="tel:919811930241">+91-9811930241</a></p>
-                        <p>24X7 Helpline No - <a href="tel:1911202400973">+1-911-2024-00973</a></p>
-                       <a href="mailto:icabb2022@gmail.com">Mail us at icabb2022@gmail.com</a>
-                       <br>
-                       <a href="mailto:conference2022@jiiticabb.com">or at conference2022@jiiticabb.com</a>
-                       <br>
-                       <a href="mailto:JIITwebadmin@jiit.ac.in">or at JIITwebadmin@jiit.ac.in</a>
+                        <p> EPBAX - 0120-2400973-976</p>
                     </div>
 
 
@@ -92,6 +87,14 @@
                     <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
                     <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
                 </div>
+                <a href="mailto:icabb2022@gmail.com">Mail us at icabb2022@gmail.com</a>
+                <br>
+                <a href="mailto:conference2022@jiiticabb.com">or at conference2022@jiiticabb.com</a>
+                <br>
+                <a href="mailto:JIITwebadmin@jiit.ac.in">or at JIITwebadmin@jiit.ac.in</a>
+                <br>
+                <br>
+                <p>24X7 Helpline No - <a href="tel:1911202400973">+1-911-2024-00973</a></p>
                 <div class="credit">
                     <p>&copy ICABB JIIT 2022</p>
                     <div class="line"></div>
