--- a/gallery.html
+++ b/gallery.html
@@ -42,14 +42,14 @@
     </lines>
     <content>
       <div class="main-wrap past-photo" style="margin-bottom:15%;">
-        <div class="content" style="width:90%;">
+        <div class="content" style="width:75%;">
                 <h1 style="
               background: linear-gradient(0deg, #28b5b5, #8fd9a8);
               background-clip: border-box;
               background-clip: border-box;
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
-            ">
+                ">
                     GALLERY
                 </h1>
                 <div class="head">
@@ -57,7 +57,14 @@
                     <div class="line"></div>
                 </div>
 
-                <div class="container-fluid">
+                <div class="container-fluid" style="padding-top: 1vh;">
+                  <h2 style="background: linear-gradient(0deg, #800000, #FF6347);
+                  background-clip: border-box;
+                  background-clip: border-box;
+                  -webkit-background-clip: text;
+                  -webkit-text-fill-color: transparent;
+                  font-size: 40px;
+                  "> Memories of ICABB 2020:</h2>
                   <div class="car-container">
                     <div class="car-container-inner">
                       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -86,13 +93,166 @@
                             <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
 
                           </div>
+                          <div class="carousel-item">
+                            <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
 
+                          </div>
                         </div>
+
+
+
                         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="sr-only">Previous</span>
                         </a>
                         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <!-- Second Carousel -->
+                
+                <div class="container-fluid" style="padding-top: 20vh;">
+                  <h2 style="background: linear-gradient(0deg, #0a1172, #63c5da);
+                  background-clip: border-box;
+                  background-clip: border-box;
+                  -webkit-background-clip: text;
+                  -webkit-text-fill-color: transparent;
+                  font-size: 40px;"> Memories of ICABB 2021:</h2>
+                  <div class="car-container">
+                    <div class="car-container-inner">
+                      <div id="carouselExampleIndicator2" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+
+                          <div class="carousel-item active item">
+                            <img src="assets/1.png" class="d-block w-100 car-img" alt="..." />
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="assets/2.png" class="d-block w-100 car-img" alt="..." />
+                          </div>
+
+
+                          <div class="carousel-item">
+                            <img src="assets/3.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="assets/3.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+
+                          <div class="carousel-item">
+                            <img src="assets/4.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/5.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/6.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/7.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/8.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/9.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/10.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/11.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/12.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/13.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/14.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/15.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/16.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/17.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/18.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/19.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/20.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/21.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/22.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/23.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/24.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/25.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/26.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/27.png" class="d-block w-100 car-img" alt="..." />
+
+                          </div>
+                        </div>
+
+
+
+                        <a class="carousel-control-prev" href="#carouselExampleIndicator2" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicator2" role="button" data-slide="next">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="sr-only">Next</span>
                         </a>
