--- a/registration.html
+++ b/registration.html
@@ -59,8 +59,6 @@
                 <div class="container" style="padding-bottom:15%;">
                     <div class="container d-flex flex-column align-items-center justify-content-center"
                         style="margin-top: 30px;">
-                        <p style="color: red;font-weight: bold;"> NO APPLICATION WILL BE ENTERTAINED FOR ATTENDEES WITHOUT PAYMENT 
-                        </p><br />
                     </div>
 
                     <!-- Table Test -->
@@ -139,6 +137,8 @@
                 </div>
 
                     <h2 class="text-center">ATTENDEE</h2>
+                    <p style="color: red;font-weight: bold; text-align: center;"> NO APPLICATION WILL BE ENTERTAINED FOR ATTENDEES WITHOUT PAYMENT 
+                    </p></br>
                     <div class="content-gray" style="display: block; margin-bottom:5%;">
                         <p><b>STEP 1</b> <i class="fa fa-chevron-right" aria-hidden="true"></i>
                             <a href="registration-fees.html"><button>PROCEED WITH PAYMENT
@@ -199,7 +199,7 @@
 
                   <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
                       style="margin-top: 40px;">
-                    <a href="contact-us.html"><button>CONTACT US</button></a>
+                    <a href="contact-us.html"><button>CONTACT THE ORGANIZERS</button></a>
                   </div>
 
                 </div>
