--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
         <div class="car-container">
           <div class="car-container-inner">
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-              <div class="carousel-inner">
+              <div class="carousel-inner" style="max-height: 40vh;">
 
                 <div class="carousel-item active item">
                   <img src="assets/1.1.jpg" class="d-block w-100 car-img" alt="..." />
@@ -152,7 +152,7 @@
                   <li class="list-item"><a class="navbar" href="orgCommittee.html">ORGANISING COMMITEE</a></li>
                   <li class="list-item"><a class="navbar" href="advisoryCommittee.html">ADVISORY COMMITEE</a></li>
                   <li class="list-item"><a class="navbar" href="JournalPartner.html">JOURNAL PARTNERS</a></li>
-                  <li class="list-item"><a class="navbar" href="#Sponsors">SPONSORS</a></li>
+                  <li class="list-item"><a class="navbar" href="#Sponsors"> PARTNERS </a></li>
                   <li class="list-item"><a class="navbar" href="gallery.html">GALLERY</a></li>
                   <!-- target="_blank" -->
                 </ul>
@@ -552,7 +552,7 @@
               -webkit-background-clip: text;
               -webkit-text-fill-color: transparent;
             "  id="Sponsors">
-          Sponsors
+          Partners
         </h1>
 
         <div class="head">
@@ -560,14 +560,12 @@
         </div>
         <div class="sponsors">
           <div class="associate-sponsors">
-            <h2> Coming Soon! </h2>
-            <!-- <div class="spon-title p-1">Associate Sponsors</div> -->
-            <!-- <a href="#"><img class="sponsor-img" src="assets/Laczene.png" alt="" /></a>
-            <a href="#"><img class="sponsor-img" src="assets/Promega.png" alt="" /></a> -->
+            <div class="spon-title p-1" style="font-size: 60px;">Knowledge Partners</div>
+            <a href="https://idma-assn.org/" style="font-size: 40px;"> IDMA - Indian Drug Manufacturer's Assosication </a>
           </div>
         </div>
       </div>
-      <div class="title">Sponsors</div>
+      <div class="title">Partners</div>
       <div class="collab">
         <a href="mailto:icabb22@gmail.com">
           COLLAB WITH <span>US</span>
