Final Setup (Hopefully)
Added address of college and EPBAX/FAX to the footer

--- a/orgCommittee.html
+++ b/orgCommittee.html
@@ -120,7 +120,7 @@
                     <div class="team-row" style="margin-bottom:400px;">
 
                       <div class="judges img">
-                        <img src="assets/org-rachna.jpeg" />
+                        <img src="assets/org1-new.jpg" />
                         <div class="team-content">
                           <h1>Prof. Rachana</h1>
                           <br />
@@ -130,7 +130,7 @@
                         </div>
                       </div>
                       <div class="judges img right">
-                        <img src="assets/Shazia-photo.jpg" />
+                        <img src="assets/Shazia-photo-copy.jpg" />
                         <div class="team-content">
                           <h1>Dr. Shazia Haider</h1>
                           <br />
@@ -310,6 +310,8 @@
                         <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
                         BY
                         <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
+                        <span style="color: white;font-size: 16px;font-weight: 500;"> and </span>
+                        <span><a target="_blank" href="https://www.linkedin.com/in/nikhil-paleti-3491aa193/">NIKHIL PALETI</a></span>
                     </p>
                 </div>
             </div>
