--- a/speakers.html
+++ b/speakers.html
@@ -202,6 +202,8 @@
                     <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
                     BY
                     <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
+                    <span style="color: white;font-size: 16px;font-weight: 500;"> and </span>
+                    <span><a target="_blank" href="https://www.linkedin.com/in/nikhil-paleti-3491aa193/">NIKHIL PALETI</a></span>
                 </p>
             </div>
             </div>
