--- a/home.html
+++ b/home.html
@@ -716,6 +716,12 @@
           <a href="https://www.instagram.com/icabb_2021/" target="_blank"><i class="fa fa-instagram"></i></a>
           <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
           <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
+          <br>
+                <p> EPBAX - 0120-2400973-976 </p>
+                <p> FAX - 2401006 </p>
+                <p>24X7 Helpline No - <a href="tel:1911202400973" target="_blank">+1-911-2024-00973</a></p>
+
+                <p> Address: <a target="_blank" href="https://www.google.com/maps/place/JAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY/@28.6297338,77.3698669,17z/data=!4m12!1m6!3m5!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!2sJAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY!8m2!3d28.6297291!4d77.3720556!3m4!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!8m2!3d28.6297291!4d77.3720556"> Jaypee Institute of Information Technology, A 10, A Block, Block A, Industrial Area, Sector 62, Noida, Uttar Pradesh 201309 </a></p>
         </div>
         <div class="credit">
           <a target="_blank" href="contact-us.html" style="
@@ -724,7 +730,8 @@
                 border-bottom: white 2px solid;
                 color: white;
                 text-decoration: none;
-              ">CONTACT US</a><br /><br />
+              ">CONTACT US</a><br/><br/>
+          
           <p>&copy ICABB JIIT 2022</p>
           <div class="line"></div>
           <p>
@@ -732,8 +739,10 @@
             <i class="fa fa-heart" style="color: rgb(238, 71, 79); margin: 0px 5px"></i>
             BY
             <a target="_blank" href="https://sunnydhama.com/">SUNNY DHAMA</a>
-              <span style="color: white;font-size: 16px;font-weight: 500;">AND</span>
-             <span><a target="_blank" href="https://www.linkedin.com/in/utkarsh-aggarwal-ab5ba31a0/">UTKARSH AGGARWAL</a></span>
+            <span style="color: white;font-size: 16px;font-weight: 500;">,</span>
+            <span><a target="_blank" href="https://www.linkedin.com/in/utkarsh-aggarwal-ab5ba31a0/">UTKARSH AGGARWAL</a></span>
+            <span style="color: white;font-size: 16px;font-weight: 500;"> and </span>
+            <span><a target="_blank" href="https://www.linkedin.com/in/nikhil-paleti-3491aa193/">NIKHIL PALETI</a></span>
           </p>
         </div>
       </div>
