--- a/contact-us.html
+++ b/contact-us.html
@@ -98,7 +98,7 @@
                 <p> FAX - 2401006 </p>
                 <p>24X7 Helpline No - <a target="_blank" href="tel:1911202400973">+1-911-2024-00973</a></p>
 
-                <p> Address: <a href="https://www.google.com/maps/place/JAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY/@28.6297338,77.3698669,17z/data=!4m12!1m6!3m5!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!2sJAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY!8m2!3d28.6297291!4d77.3720556!3m4!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!8m2!3d28.6297291!4d77.3720556" target="_blank"> Jaypee Institute of Information Technology, A 10, A Block, Block A, Industrial Area, Sector 62, Noida, Uttar Pradesh 201309</p>
+                <p> Address: <a href="https://www.google.com/maps/place/JAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY/@28.6297338,77.3698669,17z/data=!4m12!1m6!3m5!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!2sJAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY!8m2!3d28.6297291!4d77.3720556!3m4!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!8m2!3d28.6297291!4d77.3720556" target="_blank"> Jaypee Institute of Information Technology, A 10, A Block, Block A, Industrial Area, Sector 62, Noida, Uttar Pradesh 201309 </a></p>
                 <div class="credit">
                     <p>&copy ICABB JIIT 2022</p>
                     <div class="line"></div>
