--- a/home.html
+++ b/home.html
@@ -561,7 +561,8 @@
         <div class="sponsors">
           <div class="associate-sponsors">
             <div class="spon-title p-1" style="font-size: 60px;">Knowledge Partners</div>
-            <a href="https://idma-assn.org/" style="font-size: 40px;"> IDMA - Indian Drug Manufacturer's Assosication </a>
+            <a href="https://idma-assn.org/" style="font-size: 10px;" target="_blank"> <img src="assets/idma.jpg"> </a>
+            <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturer's Assosication </a>
           </div>
         </div>
       </div>
