--- a/home.html
+++ b/home.html
@@ -131,13 +131,15 @@
           <img class="logo1" src="assets/logo1.png" alt="" />
           <div class="main-header-div">
             <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
-              INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
+              INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY </h1>
 
               <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
               <!-- <p style="margin-bottom: 0; font-size: 2rem">
 
             </p> -->
-              <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
+            <p style="font-size: 130%;"> (Theme: Innovations in Life Sciences and Computational Biology) </p>
+              <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</h1>
+            
 
           </div>
             <div class="navigation container-fluid">
