--- a/home.html
+++ b/home.html
@@ -131,13 +131,15 @@
           <img class="logo1" src="assets/logo1.png" alt="" />
           <div class="main-header-div">
             <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">
-              INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY
+              INTERNATIONAL CONFERENCE ON ADVANCES IN BIOSCIENCES AND BIOTECHNOLOGY </h1>
 
               <!-- <p style="margin-bottom: 0; font-size: 2rem">ON</p> -->
               <!-- <p style="margin-bottom: 0; font-size: 2rem">
 
             </p> -->
-              <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</p>
+            <p style="font-size: 130%;"> (Theme: Innovations in Life Sciences and Computational Biology) </p>
+              <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</h1>
+            
 
           </div>
             <div class="navigation container-fluid">
@@ -561,7 +563,8 @@
         <div class="sponsors">
           <div class="associate-sponsors">
             <div class="spon-title p-1" style="font-size: 60px;">Knowledge Partners</div>
-            <a href="https://idma-assn.org/" style="font-size: 40px;"> IDMA - Indian Drug Manufacturer's Assosication </a>
+            <a href="https://idma-assn.org/" style="font-size: 10px;" target="_blank"> <img src="assets/idma.jpg"> </a>
+            <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturer's Assosication </a>
           </div>
         </div>
       </div>
