--- a/brochure.html
+++ b/brochure.html
@@ -58,8 +58,8 @@
                 <div class="container">
                     <div class="content-gray" style="display: block;">
 
-                        <img class="jp-img" src="https://utkarsh-crypto.github.io/icabbjiit/assets/brochure-page-1.PNG" style="width:90%;" alt="">
-                        <img class="jp-img" src="https://utkarsh-crypto.github.io/icabbjiit/assets/brochure-page-2.PNG" style="width:90%;" alt="">
+                        <img class="jp-img" src="assets/brochure-page-1.PNG" style="width:90%;" alt="">
+                        <img class="jp-img" src="assets/brochure-page-2.PNG" style="width:90%;" alt="">
                         <br>
                         <br>
                         <br>
