--- a/home.html
+++ b/home.html
@@ -137,8 +137,8 @@
               <!-- <p style="margin-bottom: 0; font-size: 2rem">
 
             </p> -->
-            <p style="font-size: 130%;"> (Theme: Innovations in Life Sciences and Computational Biology) </p>
-              <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</h1>
+            <h1 style="font-size: 2.6vmax; font-family: 'Roboto Slab', serif;">ICABB 2022</h1>
+            <marquee style="font-size: 130%;"> (Theme: Innovations in Life Sciences and Computational Biology) </marquee>
             
 
           </div>
@@ -340,7 +340,7 @@
         REGISTER <span>NOW</span>
         <div class="line"></div>
       </div>
-      <div class="shape shape-5 rellax" data-rellax-speed="5" data-rellax-percentage="0.5">
+      <div class="shape shape-5 rellax" data-rellax-speed="1" data-rellax-percentage="0.5">
         <img src="assets/1456467-96d35f.svg" alt="">
         <!-- <img src="img/blue/blueShapeSide2.png" /> -->
       </div>
@@ -563,7 +563,7 @@
         <div class="sponsors">
           <div class="associate-sponsors">
             <div class="spon-title p-1" style="font-size: 60px;">Knowledge Partners</div>
-            <a href="https://idma-assn.org/" style="font-size: 10px;" target="_blank"> <img src="assets/idma.jpg"> </a>
+            <a href="https://idma-assn.org/" style="font-size: 10px;" target="_blank"> <img src="assets/idma.jpg"> </a> <br>
             <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturer's Assosication </a>
           </div>
         </div>
@@ -720,8 +720,7 @@
           <a href="https://www.linkedin.com/mwlite/in/jiit-icabb-470b311bb" target="_blank"><i class="fa fa-linkedin-square"></i></a>
           <a href="mailto:icabb2022@gmail.com" target="_blank"><i class="fa fa-envelope"></i></a>
           <br>
-                <p> EPBAX - 0120-2400973-976 </p>
-                <p> FAX - 2401006 </p>
+                <p> EPBAX - 0120-2400973-976 &emsp; FAX - 2401006 </p>
                 <p>24X7 Helpline No - <a href="tel:1911202400973" target="_blank">+1-911-2024-00973</a></p>
 
                 <p> Address: <a target="_blank" href="https://www.google.com/maps/place/JAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY/@28.6297338,77.3698669,17z/data=!4m12!1m6!3m5!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!2sJAYPEE+INSTITUTE+OF+INFORMATION+TECHNOLOGY!8m2!3d28.6297291!4d77.3720556!3m4!1s0x390ce551491b3ce7:0x7335d9fcfd4d9db0!8m2!3d28.6297291!4d77.3720556"> Jaypee Institute of Information Technology, A 10, A Block, Block A, Industrial Area, Sector 62, Noida, Uttar Pradesh 201309 </a></p>
