--- a/callForAbstract.html
+++ b/callForAbstract.html
@@ -209,6 +209,15 @@
                                     disturbance</li>
                                 <li>Kindly enter the conference with your real username. Unusual names like (test, user1
                                     etc.) will not be allowed to enter.</li> -->
+                                <li> 
+                                    1 conference lunch and 2 tea refreshments: for Attendee only 
+                                </li>
+                                <li>
+                                    3 conference lunch and 5 tea refreshments; 1 Conference dinner: for all 
+                                </li>
+                                <li>
+                                    Registeration fee includes conference material (CD, bag, certificate, etc.)
+                                </li>
                             </ul>
                         </div>
                     </div>
