--- a/home.html
+++ b/home.html
@@ -565,7 +565,7 @@
           <div class="associate-sponsors">
             <div class="spon-title p-1" style="font-size: 60px;">Knowledge Partners</div>
             <a href="https://idma-assn.org/" style="font-size: 10px;" target="_blank"> <img src="assets/idma.jpg"> </a> <br>
-            <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturer's Assosication </a>
+            <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturers' Association </a>
           </div>
         </div>
       </div>
