--- a/gallery.html
+++ b/gallery.html
@@ -93,9 +93,27 @@
                             <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
 
                           </div>
-                          <div class="carousel-item">
-                            <img src="assets/c11.jpeg" class="d-block w-100 car-img" alt="..." />
+                          <div class="carousel-item active item">
+                            <img src="assets/gal1.jpg" class="d-block w-100 car-img" alt="..." />
+                          </div>
 
+                          <div class="carousel-item active item">
+                            <img src="assets/gal2.jpg" class="d-block w-100 car-img" alt="..." />
+                          </div>
+
+                          <div class="carousel-item active item">
+                            <img src="assets/gal3.jpg" class="d-block w-100 car-img" alt="..." />
+                          </div>
+
+                          <div class="carousel-item active item">
+                            <img src="assets/gal4.jpg" class="d-block w-100 car-img" alt="..." />
+                          </div>
+
+                          <div class="carousel-item active item">
+                            <img src="assets/gal5.jpg" class="d-block w-100 car-img" alt="..." />
+                          </div>
+                          <div class="carousel-item active item">
+                            <img src="assets/event_img_2.jpg" class="d-block w-100 car-img" alt="..." />
                           </div>
                         </div>
 
