--- a/advisoryCommittee.html
+++ b/advisoryCommittee.html
@@ -76,6 +76,7 @@
                         </p>
                         <p>Prof S Panda, IIT Kanpur
                         </p>
+                        <p> Nikunj Sharma, US FDA - International Advisor</p>
                     </div>
                     <div class="container-fluid d-flex flex-column justify-content-center align-items-center"
                         style="margin-top: 40px;">
