--- a/home.html
+++ b/home.html
@@ -564,8 +564,10 @@
         <div class="sponsors">
           <div class="associate-sponsors">
             <div class="spon-title p-1" style="font-size: 60px;">Knowledge Partners</div>
-            <a href="https://idma-assn.org/" style="font-size: 10px;" target="_blank"> <img src="assets/idma.jpg"> </a> <br>
-            <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturers' Association </a>
+            <a href="https://idma-assn.org/" target="_blank"> <img src="assets/idma.jpg"> </a> <br>
+            <a href="https://idma-assn.org/" style="font-size: 28.5px;" target="_blank"> IDMA - Indian Drug Manufacturers' Association </a> <br>
+            <a href="https://www.kppub.com/" target="_blank"> <img src="assets/kongposh.jpg"> </a> <br>
+            <a href="https://www.kppub.com/" style="font-size: 28.5px;" target="_blank"> Kongposh Publications </a>
           </div>
         </div>
       </div>
